--- a/models/training-tuning-scripts/log-parsing-models/requirements.yml
+++ b/models/training-tuning-scripts/log-parsing-models/requirements.yml
@@ -1,4 +1,4 @@
-# SPDX-FileCopyrightText: Copyright (c) 2022-2023, NVIDIA CORPORATION & AFFILIATES. All rights reserved.
+# SPDX-FileCopyrightText: Copyright (c) 2023, NVIDIA CORPORATION & AFFILIATES. All rights reserved.
 # SPDX-License-Identifier: Apache-2.0
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
@@ -14,17 +14,17 @@
 # limitations under the License.
 
 channels:
-    - rapidsai
-    - nvidia
-    - pytorch
-    - conda-forge
+  - rapidsai
+  - nvidia
+  - pytorch
+  - conda-forge
 dependencies:
-    - cudf=23.06
-    - jupyterlab
-    - onnx
-    - python=3.10
-    - pytorch-cuda=11.8
-    - pytorch=2.0.1
-    - seqeval=1.2.2
-    - tqdm=4
-    - transformers
+  - cudf=23.06
+  - jupyterlab
+  - onnx
+  - python=3.10
+  - pytorch-cuda=11.8
+  - pytorch=2.0.1
+  - seqeval=1.2.2
+  - tqdm=4
+  - transformers
