--- a/models/training-tuning-scripts/ransomware-models/requirements.yml
+++ b/models/training-tuning-scripts/ransomware-models/requirements.yml
@@ -1,4 +1,4 @@
-# SPDX-FileCopyrightText: Copyright (c) 2022-2023, NVIDIA CORPORATION & AFFILIATES. All rights reserved.
+# SPDX-FileCopyrightText: Copyright (c) 2023, NVIDIA CORPORATION & AFFILIATES. All rights reserved.
 # SPDX-License-Identifier: Apache-2.0
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
@@ -14,11 +14,11 @@
 # limitations under the License.
 
 channels:
-    - conda-forge
+  - conda-forge
 dependencies:
-    - jupyterlab
-    - matplotlib
-    - pandas=1.3
-    - python=3.10
-    - scikit-learn=1.2.2
-    - seaborn
+  - jupyterlab
+  - matplotlib
+  - pandas=1.3
+  - python=3.10
+  - scikit-learn=1.2.2
+  - seaborn
