--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ markers = [
   "benchmark: Benchmarks",
   "slow: Slow tests",
   "kafka: Tests that require a running instance of kafka",
+  "milvus: Tests that require a running instance of milvus",
   "use_cpp: Test support C++ nodes and objects",
   "use_python: Test only supports Python nodes and objects",
   "use_cudf: Test supports cuDF datasets",
