--- a/examples/llm/rag/requirements.yaml
+++ b/examples/llm/rag/requirements.yaml
@@ -17,18 +17,19 @@ channels:
   - huggingface
   - conda-forge
 dependencies:
-  - langchain=0.0.190
   - pip
-  - requests-cache=1.1
-  - sentence-transformers
-  - transformers
+  - openai=0.28
 
   ####### Pip Transitive Dependencies (keep sorted!) #######
   # These are dependencies that are available on conda, but are required by the pip packages listed below. Its much
   # better to install them with conda than pip to allow for better dependency resolution.
 
+  # Required for langchain==0.0.310
+  - anyio=3.7
+  - jsonpatch=1.33
 
   ####### Pip Dependencies (keep sorted!) #######
   - pip:
+    - google-search-results==2.4
     - grpcio-status==1.58 # To keep in sync with 1.58 grpcio which is installed for Morpheus
-    - nemollm
+    - langchain==0.0.310
