First pass update on vdb_upload README.md, and fixes to vdb_upload requirements.yaml

--- a/examples/llm/vdb_upload/requirements.yaml
+++ b/examples/llm/vdb_upload/requirements.yaml
@@ -17,7 +17,7 @@ channels:
   - conda-forge
 dependencies:
   - arxiv=1.4
-  - langchain=0.0.190
+  - onnx # required for triton model export
   - pip
   - pypdf=3.16
   - newspaper3k=0.2
@@ -28,10 +28,12 @@ dependencies:
   # better to install them with conda than pip to allow for better dependency resolution.
   - environs=9.5
   - minio=7.1
+  - pydantic=2.4
   - python-dotenv=1.0
   - ujson=5.8
 
   ####### Pip Dependencies (keep sorted!) #######
   - pip:
     - grpcio-status==1.58 # To keep in sync with 1.58 grpcio which is installed for Morpheus
+    - langchain==0.0.310
     - pymilvus # The conda package is woefully out of date and incorrect
