Adopt updated doxygen to fix parsing errors

--- a/docs/conda_docs.yml
+++ b/docs/conda_docs.yml
@@ -18,7 +18,7 @@ channels:
   - conda-forge
 dependencies:
   - breathe=4.34.0
-  - doxygen=1.9.2
+  - doxygen>=1.9.8,<2.0
   - exhale=0.3.6
   - ipython
   - myst-parser=0.17.2
