remove pycoro in favor of mrc coro

--- a/morpheus/_lib/llm/CMakeLists.txt
+++ b/morpheus/_lib/llm/CMakeLists.txt
@@ -29,7 +29,7 @@ list(APPEND MODULE_SOURCE_FILES module.cpp)
 morpheus_add_pybind11_module(llm
    INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR}/include
    SOURCE_FILES ${MODULE_SOURCE_FILES}
-   LINK_TARGETS morpheus morpheus._lib.pycoro
+   LINK_TARGETS morpheus
    CURRENT_DIR_IS_MODULE
 )
 
