--- a/.github/workflows/ci_pipe.yml
+++ b/.github/workflows/ci_pipe.yml
@@ -133,6 +133,7 @@ jobs:
         NVIDIA_VISIBLE_DEVICES: ${{ env.NVIDIA_VISIBLE_DEVICES }}
         PARALLEL_LEVEL: '10'
         MERGE_EXAMPLES_YAML: '1'
+        NGC_API_KEY: ${{ secrets.NGC_API_KEY }}
     strategy:
       fail-fast: true
 
