--- a/docker/conda/environments/cuda11.8_dev.yml
+++ b/docker/conda/environments/cuda11.8_dev.yml
@@ -35,6 +35,7 @@ dependencies:
     - cuda-compiler=11.8
     - cuda-nvml-dev=11.8
     - cuda-toolkit=11.8
+    - cuda-python=11.8.2 # 11.8.3 breaks cuda helpers, pin to 11.8.2 for now.
     - cudf=23.06
     - cupy>=12.0.0
     - cxx-compiler
