--- a/docker/conda/environments/cuda11.8_examples.yml
+++ b/docker/conda/environments/cuda11.8_examples.yml
@@ -38,6 +38,7 @@ dependencies:
     - libwebp>=1.3.2 # Required for CVE mitigation: https://nvd.nist.gov/vuln/detail/CVE-2023-4863
     - mlflow>=2.2.1,<3
     - newspaper3k=0.2
+    - openai=0.28
     - papermill=2.3.4
     - pypdf=3.16
     - requests-cache=1.1
@@ -56,5 +57,6 @@ dependencies:
 
   ####### Pip Dependencies (keep sorted!) #######
     - pip:
+        - google-search-results==2.4
         - grpcio-status==1.58 # To keep in sync with 1.58 grpcio which is installed for Morpheus
         - nemollm
