--- a/examples/llm/vdb_upload/requirements.yaml
+++ b/examples/llm/vdb_upload/requirements.yaml
@@ -36,4 +36,4 @@ dependencies:
   - pip:
     - grpcio-status==1.58 # To keep in sync with 1.58 grpcio which is installed for Morpheus
     - langchain==0.0.310
-    - pymilvus # The conda package is woefully out of date and incorrect
+    - pymilvus==2.3.2 # The conda package is woefully out of date and incorrect
