--- a/docker/conda/environments/cuda11.8_runtime.yml
+++ b/docker/conda/environments/cuda11.8_runtime.yml
@@ -22,6 +22,12 @@ channels:
 dependencies:
     - nb_conda_kernels
     - pip
+
+    ####### Pip Transitive Dependencies (keep sorted!) #######
+    # These are dependencies that are available on conda, but are required by the pip packages listed below. Its much
+    # better to install them with conda than pip to allow for better dependency resolution.
+    - py4j=0.10
+
     - pip:
         # Add additional pip only dependencies here
         - databricks-connect
