--- a/docker/conda/environments/cuda11.8_dev.yml
+++ b/docker/conda/environments/cuda11.8_dev.yml
@@ -95,8 +95,9 @@ dependencies:
     - pytorch-cuda
     - pytorch=2.0.1
     - rapidjson=1.1.0
-    - requests=2.31
+    - rdma-core >=48 # Needed for DOCA. Compatible with UCX 1.14.1
     - requests-cache=1.1
+    - requests=2.31
     - scikit-build=0.17.1
     - scikit-learn=1.2.2
     - sphinx
