Guard optional dependencies in try/except blocks (#1382)
* Add missing dependencies for `requests`, `requests-cache` and `websockets` to `meta.yaml`
* Dependencies which are only utilized by a single stage are intentionally omitted from `meta.yaml`, even if they appear in `cuda11.8_dev.yml`
* Current that list is: `bs4`, `elasticsearch`, `feedparser` and `milvus`
* Move `MILVUS_DATA_TYPE_MAP` from `morpheus/service/vdb/milvus_client.py` to `tests/test_milvus_vector_db_service.py` which was the only place it was used.

Note: Since these dependencies all exist in `cuda11.8_dev.yml`, there is no effort made to update the tests to optionally skip their associated tests.

Closes #1380

## By Submitting this PR I confirm:
- I am familiar with the [Contributing Guidelines](https://github.com/nv-morpheus/Morpheus/blob/main/docs/source/developer_guide/contributing.md).
- When the PR is ready for review, new or existing tests cover these changes.
- When the PR is ready for review, the documentation is up to date with these changes.

Authors:
  - David Gardner (https://github.com/dagardner-nv)

Approvers:
  - Michael Demoret (https://github.com/mdemoret-nv)

URL: https://github.com/nv-morpheus/Morpheus/pull/1382

--- a/ci/conda/recipes/morpheus/meta.yaml
+++ b/ci/conda/recipes/morpheus/meta.yaml
@@ -92,12 +92,15 @@ outputs:
         - python-confluent-kafka 1.9.2
         - pytorch 2.0.1
         - pytorch-cuda
+        - requests=2.31
+        - requests-cache=1.1
         - scikit-learn 1.2.2.*
         - sqlalchemy <=2.0 # 2.0 is incompatible with pandas=1.3
         - tqdm 4.*
         - tritonclient 2.26.*
         - typing_utils 0.1.*
         - watchdog 2.1.*
+        - websockets
       run_constrained:
         # Since we dont explicitly require this but other packages might, constrain the versions.
         - {{ pin_compatible('cudatoolkit', min_pin='x.x', max_pin='x') }}
