--- a/ci/conda/recipes/morpheus/meta.yaml
+++ b/ci/conda/recipes/morpheus/meta.yaml
@@ -82,7 +82,7 @@ outputs:
         - libwebp>=1.3.2 # Required for CVE mitigation: https://nvd.nist.gov/vuln/detail/CVE-2023-4863
         - mlflow>=2.2.1,<3
         - mrc
-        - networkx 3.1.*
+        - networkx>=2.8
         - numpydoc 1.4.*
         - nvtabular {{ rapids_version }}.*
         - pandas 1.3.*
