Fix default -> defaults problem

--- a/docker/conda/environments/cuda11.8_examples.yml
+++ b/docker/conda/environments/cuda11.8_examples.yml
@@ -26,7 +26,7 @@ channels:
     - huggingface
     - conda-forge
     - dglteam/label/cu118
-    - default
+    - defaults
 dependencies:
     - arxiv=1.4
     - boto3
