--- a/docker/conda/environments/cuda11.8_runtime.yml
+++ b/docker/conda/environments/cuda11.8_runtime.yml
@@ -19,7 +19,7 @@ channels:
     - nvidia
     - rapidsai-nightly
     - conda-forge
-    - default
+    - defaults
 dependencies:
     - nb_conda_kernels
     - pip
