--- a/docker/conda/environments/cuda11.8_dev.yml
+++ b/docker/conda/environments/cuda11.8_dev.yml
@@ -21,7 +21,7 @@ channels:
     - nvidia/label/dev # For pre-releases of MRC. Should still default to full releases if available
     - pytorch
     - conda-forge
-    - default
+    - defaults
 dependencies:
     ####### Morpheus Dependencies (keep sorted!) #######
     - automake=1.16.5
