--- a/models/training-tuning-scripts/fraud-detection-models/requirements.yml
+++ b/models/training-tuning-scripts/fraud-detection-models/requirements.yml
@@ -19,12 +19,12 @@ channels:
   - dglteam/label/cu118
   - pytorch
   - conda-forge
+  - defaults
 dependencies:
   - click>=8
   - cuml=23.06
   - dgl
   - jupyterlab
-  - matplotlib
   - pytorch-cuda=11.8
   - pytorch=2.0.1
   - scikit-learn=1.2.2
