Fixing the conda-build with DOCA enabled and upgrading to CMake 3.25 (#1386)
This PR fixes the DOCA modules with building with `MORPHEUS_SUPPORT_DOCA=ON`. In addition, the following changes needed to be made:

- Upgrade CMake from 3.24 -> 3.25
   - Necessary to cleanly set `CMAKE_FIND_ROOT_PATH_MODE_INCLUDE` (and similar variables) using the `block()` function
   - Other option is to manually save off these specific variables and restore them all later which is cumbersome and error prone.
- Adds dependency to `rdma-core>=48`
   - This is necessary since DOCA requires the MLX_1.19 symbols which arent in `rdma-core=28.9`

Authors:
  - Michael Demoret (https://github.com/mdemoret-nv)
  - Pete MacKinnon (https://github.com/pdmack)

Approvers:
  - Christopher Harris (https://github.com/cwharris)

URL: https://github.com/nv-morpheus/Morpheus/pull/1386

--- a/ci/conda/recipes/morpheus/meta.yaml
+++ b/ci/conda/recipes/morpheus/meta.yaml
@@ -33,8 +33,9 @@ outputs:
         # Note: Setting a default value here will overwrite the value from the
         # shell! Defaults should be set in the run_conda_build.sh script
         - CMAKE_CUDA_ARCHITECTURES
-        - MORPHEUS_PYTHON_BUILD_STUBS
         - MORPHEUS_CACHE_DIR
+        - MORPHEUS_PYTHON_BUILD_STUBS
+        - MORPHEUS_SUPPORT_DOCA
         - PARALLEL_LEVEL
       run_exports:
         - {{ pin_subpackage("morpheus", max_pin="x.x") }}
@@ -47,9 +48,11 @@ outputs:
         - {{ compiler("c") }}
         - {{ compiler("cxx") }}
         - {{ compiler("cuda") }}
+        - automake 1.16.5 # Needed for DOCA build
         - ccache
-        - cmake 3.24
+        - cmake 3.25
         - cuda-cudart-dev {{ cuda_compiler_version }} # Needed by CMake to compile a test application
+        - libtool # Needed for DOCA build
         - ninja
       host:
         - cuda-toolkit {{ cuda_compiler_version }}
@@ -63,6 +66,7 @@ outputs:
         - pybind11-stubgen 0.10.5
         - python {{ python }}
         - rapidjson 1.1
+        - rdma-core >=48 # Needed for DOCA. Compatible with UCX 1.14.1
         - scikit-build 0.17.1
         - versioneer-518
       run:
