--- a/.github/workflows/ci_pipe.yml
+++ b/.github/workflows/ci_pipe.yml
@@ -60,7 +60,7 @@ jobs:
   check:
     if: ${{ inputs.run_check }}
     name: Check
-    runs-on: linux-amd64-cpu4
+    runs-on: linux-amd64-cpu4-testing
     timeout-minutes: 60
     container:
       credentials:
@@ -91,7 +91,7 @@ jobs:
 
   build:
     name: Build
-    runs-on: linux-amd64-cpu16
+    runs-on: linux-amd64-cpu16-testing
     timeout-minutes: 60
     container:
       credentials:
@@ -157,7 +157,7 @@ jobs:
   documentation:
     name: Documentation
     needs: [build]
-    runs-on: linux-amd64-cpu4
+    runs-on: linux-amd64-cpu4-testing
     timeout-minutes: 60
     container:
       credentials:
