--- a/docker/conda/environments/cuda11.8_examples.yml
+++ b/docker/conda/environments/cuda11.8_examples.yml
@@ -59,6 +59,7 @@ dependencies:
 
   ####### Pip Dependencies (keep sorted!) #######
     - pip:
+        - farm-haystack[all-gpu]==1.22.1
         - google-search-results==2.4
         - grpcio-status==1.58 # To keep in sync with 1.58 grpcio which is installed for Morpheus
         - nemollm
