--- a/examples/llm/agents/requirements.yaml
+++ b/examples/llm/agents/requirements.yaml
@@ -31,5 +31,6 @@ dependencies:
 
   ####### Pip Dependencies (keep sorted!) #######
   - pip:
+    - farm-haystack[all-gpu]==1.22.1
     - grpcio-status==1.58 # To keep in sync with 1.58 grpcio which is installed for Morpheus
     - nemollm
