--- a/dependencies.yaml
+++ b/dependencies.yaml
@@ -21,11 +21,17 @@ files:
       cuda: ["11.8"]
       arch: [x86_64]
     includes:
+      - data_retrieval
       - build_cpp
       - development_cpp
+      - benchmark_cpp
+      - examples
       - runtime
       - test_python_morpheus
+      - docs
       - cudatoolkit
+      - runtime
+      - checks
 
   build:
     output: none
