--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -42,8 +42,24 @@ permissions:
   statuses: none
 
 jobs:
+  prepare:
+    name: Prepare
+    runs-on: ubuntu-latest
+    container:
+      image: rapidsai/ci-conda:latest
+    steps:
+      - name: Get PR Info
+        id: get-pr-info
+        uses: rapidsai/shared-action-workflows/get-pr-info@branch-23.08
+        if: ${{ startsWith(github.ref_name, 'pull-request/') }}
+    outputs:
+      has_skip_ci_label: ${{ steps.get-pr-info.outcome == 'success' && contains(fromJSON(steps.get-pr-info.outputs.pr-info).labels.*.name, 'skip-ci') || false }}
+
   ci_pipe:
+    name: CI Pipeline
+    needs: [prepare]
     uses: ./.github/workflows/ci_pipe.yml
+    if: ${{ !needs.prepare.outputs.has_skip_ci_label }}
     with:
       run_check: ${{ startsWith(github.ref_name, 'pull-request/') }}
       container: nvcr.io/ea-nvidia-morpheus/morpheus:morpheus-ci-build-230913
