--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -62,7 +62,7 @@ jobs:
     needs: [prepare]
     uses: ./.github/workflows/ci_pipe.yml
     with:
-      pr_info: ${{ needs.prepare.outputs.pr_info }}
+      pr_outcome: ${{ needs.prepare.outputs.pr_outcome }}
       has_skip_ci_label: ${{ needs.prepare.outputs.has_skip_ci_label }}
       run_check: ${{ startsWith(github.ref_name, 'pull-request/') }}
       container: nvcr.io/ea-nvidia-morpheus/morpheus:morpheus-ci-build-230913
