--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -53,17 +53,14 @@ jobs:
         uses: rapidsai/shared-action-workflows/get-pr-info@branch-23.08
         if: ${{ startsWith(github.ref_name, 'pull-request/') }}
     outputs:
-      pr_outcome: ${{ steps.get-pr-info.outcome == 'success' }}
-      pr_info: ${{ steps.get-pr-info.outputs.pr-info }}
       has_skip_ci_label: ${{ steps.get-pr-info.outcome == 'success' && contains(fromJSON(steps.get-pr-info.outputs.pr-info).labels.*.name, 'skip-ci') || false }}
 
   ci_pipe:
     name: CI Pipeline
     needs: [prepare]
     uses: ./.github/workflows/ci_pipe.yml
+    if: ${{ ! fromJSON(needs.prepare.outputs.has_skip_ci_label) }}
     with:
-      pr_outcome: ${{ fromJSON(needs.prepare.outputs.pr_outcome) }}
-      has_skip_ci_label: ${{ fromJSON(needs.prepare.outputs.has_skip_ci_label) }}
       run_check: ${{ startsWith(github.ref_name, 'pull-request/') }}
       container: nvcr.io/ea-nvidia-morpheus/morpheus:morpheus-ci-build-230913
       test_container: nvcr.io/ea-nvidia-morpheus/morpheus:morpheus-ci-test-230913
